name:                redpill
version:             0.1.0
synopsis:            Haskell bindings to the Neo4j graph database
license:             BSD3
license-file:        LICENSE
author:              Colin King
maintainer:          richard.colin.king@gmail.com
category:            Database
build-type:          Simple
cabal-version:       >=1.18

source-repository head
  type:     git
  location: git://github.com/hakujin/redpill.git

library
  exposed-modules:     Database.Neo4j
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
  build-depends:       base,
                       aeson,
                       bytestring,
                       either,
                       http-conduit,
                       http-types,
                       mtl,
                       text,
                       transformers
